# Lex-Mex

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE.md  PLAN.md  PLANS.md  README.md  SECURITY.md
.claude/: settings.json
.codex/: hooks.json
.codex/agents/: frontier_high.toml  mechanical.toml  triage.toml  worker.toml  worker_high.toml
.github/workflows/: ci.yml
adapters/cnbv/: cub-dcg-2005.json  cucb-dcg-2004.json  cue-dcg-2003.json  fi-dcg-2014.json  ifpe-dcg-2021.json  itf-dcg-2018.json  lacp.json  lgoaac.json  lrascap.json  luc.json  oaac-dcg-2009.json  scap-dcg-2012.json  servinv-dcg-2013.json  socap-sofipo-dcg-2006.json
adapters/diputados/: _instrument-aliases.json  ccf.json  ccom.json  cff.json  cfpc.json  cnpcf.json  cnpp.json  cpeum.json  cpf.json  instrument-aliases.json  laassp.json  laat.json  lac.json  ladua.json  laero.json  lamp.json  lan.json  lapp.json  (+131 more)
batches/: admin_A1_public_admin.json  admin_A2_anticorruption.json  administration_ad1_planning_paraestatals.json  civil_C1_commercial.json  civil_C2_civil_ip.json  constitutional_CN1_congress.json  constitutional_cn2_implementing_laws.json  digital_D1_trust.json  env_E1_framework.json  env_E2_waste_forestry.json  env_E3_water.json  financial_F2_banking.json  financial_F3_securities.json  financial_F4_popular_savings.json  financial_F5_credit_auxiliaries.json  financial_F6_insurance_bonds.json  financial_F7_retirement_aml.json  labor_L1_labor.json  labor_L2_social_security.json  legacy_core_pre_manifest.json  penal_P1_core.json  penal_P2_security.json  penal_P3_special.json  salud_S1_health.json  tax_T1_core.json  tax_T2_coordination.json  tax_T3_customs.json  transporte_MI1_land_air.json  transporte_MI2_maritime.json
crates/lex-cli/: Cargo.toml
crates/lex-cli/src/: main.rs
crates/lex-export/: Cargo.toml
crates/lex-export/src/: lib.rs
crates/lex-parse/: Cargo.toml
crates/lex-parse/src/: dcg.rs  diputados.rs  html.rs  itf.rs  labels.rs  lib.rs  terms.rs
crates/lex-source/: Cargo.toml
crates/lex-source/src/: lib.rs
docs/: cnbv-consolidated-disposiciones.md  decisions.md  legal-model.md  project-status.md
prompts/: codex-handoff-2026-07-14.md  cross-linking-runbook.md  edge-graph-grouping-2026-07-14.md  lex-mex-federal-cluster-2-plan.md  lex-mex-federal-cluster-plan.md  temporal-v1.md  temporal-v2.md
schemas/: batch-manifest.schema.json  defined-term.schema.json  reference-edge.schema.json  source-manifest.schema.json  temporal-analysis.schema.json  temporal-model-output-v2.schema.json  temporal-model-output.schema.json  term-usage.schema.json
(+37300 files in other folders)
