[package]
name = "lex-source"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
lex-core = { path = "../lex-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
url.workspace = true

[lints]
workspace = true
